--- a/Development code/webscraping.ipynb
+++ b/Development code/webscraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,9 +49,7 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 93.0.4577\n",
       "Get LATEST driver version for 93.0.4577\n",
-      "Get LATEST driver version for 93.0.4577\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/93.0.4577.63/chromedriver_win32.zip\n",
-      "Driver has been saved in cache [C:\\Users\\amber\\.wdm\\drivers\\chromedriver\\win32\\93.0.4577.63]\n"
+      "Driver [C:\\Users\\leann\\.wdm\\drivers\\chromedriver\\win32\\93.0.4577.63\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -62,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Police called to Porsche driver’s home', 'Family’s plea after horror stabbing', 'Doctor traumatised by fatal home birth', '‘Frightening’ shooting at suburban Macca’s', 'Cops fine ‘all adults’ at synagogue gathering', 'Caravan park murder accused ‘distressed’', 'Multiple suspects in bookshop murder: Court', 'Fatal stabbing in caravan park: cops', 'Mum’s shock death after homebirth', 'Anti-vax leader is a reality TV flop', 'Blow in warring exes defamation trial', 'Cruel act to snatch Maccas meal: cops', 'Home-birth midwives deny claims after death', 'Kids karate teacher’s sick acts on student', 'Seven arrests in suspected bikie murder', 'New twist in woman’s suspected murder', 'New push to solve brutal schoolgirl murder', '46 arrests, machetes seized: cops', 'Cops hit in frightening ‘hate crime’', 'Vocal anti-vaxxer’s shock court move', 'Woman’s gesture to alleged gang murderer', 'Axe attackers of hero dad still on the run', '‘No excuse’: Footy star fined for driving', 'Hunt for rapist after 30 years of freedom', 'Man’s sick words before walking path rapes', '‘Rot in hell’: Family interrupts murder hearing', 'Protesters’ chilling posts targeting cops', 'Driver charged with death of footballer', 'Missing woman’s boyfriend charged', 'Protesters police wish to speak to']\n"
+      "['Wife of murdered woman’s lover ‘never knew’', 'Thieves steal $8m worth of cigarettes', 'Mum, son likely dead in ‘evil spirits’ mystery', 'Police called to Porsche driver’s home', 'Family’s plea after horror stabbing', 'Doctor traumatised by fatal home birth', '‘Frightening’ shooting at suburban Macca’s', 'Cops fine ‘all adults’ at synagogue gathering', 'Caravan park murder accused ‘distressed’', 'Multiple suspects in bookshop murder: Court', 'Fatal stabbing in caravan park: cops', 'Mum’s shock death after homebirth', 'Anti-vax leader is a reality TV flop', 'Blow in warring exes defamation trial', 'Cruel act to snatch Maccas meal: cops', 'Home-birth midwives deny claims after death', 'Kids karate teacher’s sick acts on student', 'Seven arrests in suspected bikie murder', 'New twist in woman’s suspected murder', 'New push to solve brutal schoolgirl murder', '46 arrests, machetes seized: cops', 'Cops hit in frightening ‘hate crime’', 'Vocal anti-vaxxer’s shock court move', 'Woman’s gesture to alleged gang murderer', 'Axe attackers of hero dad still on the run', '‘No excuse’: Footy star fined for driving', 'Hunt for rapist after 30 years of freedom', 'Man’s sick words before walking path rapes', '‘Rot in hell’: Family interrupts murder hearing', 'Protesters’ chilling posts targeting cops']\n"
      ]
     }
    ],
@@ -371,7 +369,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pythondata",
+   "display_name": "PythonData",
    "language": "python",
    "name": "pythondata"
   },
